Lesson 7: Add catalog(web and api) (#8)
* Lesson 7: Add catalog(web)

* Lesson 7: Add catalog(api)

* Lesson 7: remove unneeded and change api route
